<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="booking_fragment_label">Бронирование</string>
    <string name="rating">%1$d %2$s</string>
    <string name="departure">Вылет из</string>
    <string name="arrival_country">Страна, город</string>
    <string name="dates">Даты</string>
    <string name="tour_dates">%1$s – %2$s</string>
    <string name="number_of_nights">Кол-во ночей</string>
    <string name="nights">%1$d ночей</string>
    <string name="hotel">Отель</string>
    <string name="room">Номер</string>
    <string name="nutrition">Питание</string>
    <string name="customer_info">Информация о покупателе</string>
    <string name="phone_number">Номер телефона</string>
    <string name="wrong_phone_number">Некорректный номер телефона</string>
    <string name="email">Почта</string>
    <string name="wrong_email">Некорректная почта</string>
    <string name="this_data_is_not_shared_with_anyone">Эти данные никому не передаются. После оплаты мы вышли чек на указанный вами номер и почту</string>
    <string name="name">Имя</string>
    <string name="wrong_name">Некорректное имя</string>
    <string name="surname">Фамилия</string>
    <string name="wrong_surname">Некорректная фамилия</string>
    <string name="birthday">Дата рождения</string>
    <string name="wrong_birthday">Некорректная дата рождения</string>
    <string name="citizenship">Гражданство</string>
    <string name="wrong_citizenship">Некорректное ражданство</string>
    <string name="passport_number">Номер загранпаспорта</string>
    <string name="wrong_passport_number">Некорректный номер загранпаспорта</string>
    <string name="passport_validity_period">Срок действия загранпаспорта</string>
    <string name="wrong_passport_validity_period">Некорректный срок действия загранпаспорта</string>
    <string name="tourist_number">%1$s турист</string>
    <string name="add_tourist">Добавить туриста</string>
    <string name="tour_price">Тур</string>
    <string name="fuel_charge">Топливный сбор</string>
    <string name="service_charge">Сервисный сбор</string>
    <string name="for_payment">К оплате</string>
    <string name="price">"%1$s ₽"</string>
    <string name="pay_sum">"Оплатить %1$s ₽"</string>

    <string name="fragment_success_label">Заказ оплачен</string>
    <string name="order_accepted">Ваш заказ принят в работу</string>
    <string name="order_accepted_description">Подтверждение заказа №%1$d может занять некоторое время (от 1 часа до суток). Как только мы получим ответ от туроператора, вам на почту придет уведомление.</string>
    <string name="super_button">Супер!</string>
    
    <string-array name="ordinal_number">
        <item>Первый</item>
        <item>Второй</item>
        <item>Третий</item>
        <item>Четвертый</item>
        <item>Пятый</item>
    </string-array>
</resources>
