<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_card"
    android:orientation="vertical"
    android:padding="@dimen/default_margin">

    <TextView
        android:id="@+id/textViewHotelName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/customer_info"
        android:textAppearance="@style/HotelsApp.TextAppearance.Headline" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputPhoneNumber"
        style="@style/HotelsApp.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:hint="@string/phone_number">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:textAppearance="@style/HotelsApp.TextAppearance.Body1"
            tools:text="+7 (951) 555-99-00" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputEmail"
        style="@style/HotelsApp.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:hint="@string/email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textAppearance="@style/HotelsApp.TextAppearance.Body1"
            tools:text="examplemail.000@mail.ru" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:text="@string/this_data_is_not_shared_with_anyone"
        android:textAppearance="@style/HotelsApp.TextAppearance.Body2"
        android:textColor="@color/grey500" />

</androidx.appcompat.widget.LinearLayoutCompat>