<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/small_margin"
    android:background="@drawable/shape_card"
    android:orientation="vertical"
    android:padding="@dimen/default_margin">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewTouristNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/HotelsApp.TextAppearance.Headline"
            tools:text="Первый турист" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/imageButtonExpandTouristInfo"
            android:layout_width="@dimen/normal_icon_size"
            android:layout_height="@dimen/normal_icon_size"
            android:background="@drawable/shape_small_rounded_rectangle"
            android:backgroundTint="@color/blue200"
            android:clickable="true"
            android:importantForAccessibility="no"
            android:rotation="270"
            android:src="@drawable/ic_arrow" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputName"
        style="@style/HotelsApp.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:hint="@string/name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName|textCapWords"
            android:textAppearance="@style/HotelsApp.TextAppearance.Body1"
            tools:text="Иван" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputSurname"
        style="@style/HotelsApp.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:hint="@string/surname">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextSurname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName|textCapWords"
            android:textAppearance="@style/HotelsApp.TextAppearance.Body1"
            tools:text="Иванов" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputBirthday"
        style="@style/HotelsApp.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:hint="@string/birthday">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextBirthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:textAppearance="@style/HotelsApp.TextAppearance.Body1"
            tools:text="01.01.2003" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputCitizenship"
        style="@style/HotelsApp.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:hint="@string/citizenship">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextCitizenship"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textAppearance="@style/HotelsApp.TextAppearance.Body1"
            tools:text="Российская Федерация" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputPassportNumber"
        style="@style/HotelsApp.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:hint="@string/passport_number">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPassportNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textAppearance="@style/HotelsApp.TextAppearance.Body1"
            tools:text="123456789" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputPassportValidityPeriod"
        style="@style/HotelsApp.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:hint="@string/passport_validity_period">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPassportValidityPeriod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:textAppearance="@style/HotelsApp.TextAppearance.Body1"
            tools:text="12.12.2025" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.appcompat.widget.LinearLayoutCompat>