<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_card"
    android:orientation="vertical"
    android:padding="@dimen/default_margin">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4" />

    <TextView
        android:id="@+id/textViewDepartureParagraph"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/departure"
        android:textAppearance="@style/HotelsApp.TextAppearance.Body1"
        android:textColor="@color/grey500"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewDeparture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/HotelsApp.TextAppearance.Body1"
        app:layout_constrainedWidth="true"
        app:layout_constraintBaseline_toBaselineOf="@id/textViewDepartureParagraph"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@id/guideline"
        tools:text="Санкт-Петербург" />

    <TextView
        android:id="@+id/textViewArrivalCountryParagraph"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/arrival_country"
        android:textAppearance="@style/HotelsApp.TextAppearance.Body1"
        android:textColor="@color/grey500"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewDeparture" />

    <TextView
        android:id="@+id/textViewArrivalCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/HotelsApp.TextAppearance.Body1"
        app:layout_constrainedWidth="true"
        app:layout_constraintBaseline_toBaselineOf="@id/textViewArrivalCountryParagraph"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@id/guideline"
        tools:text="Египет, Хургада" />

    <TextView
        android:id="@+id/textViewTourDatesParagraph"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/dates"
        android:textAppearance="@style/HotelsApp.TextAppearance.Body1"
        android:textColor="@color/grey500"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewArrivalCountry" />

    <TextView
        android:id="@+id/textViewTourDates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/HotelsApp.TextAppearance.Body1"
        app:layout_constrainedWidth="true"
        app:layout_constraintBaseline_toBaselineOf="@id/textViewTourDatesParagraph"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@id/guideline"
        tools:text="19.09.2023 – 27.09.2023" />

    <TextView
        android:id="@+id/textViewNumberOfNightsParagraph"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/number_of_nights"
        android:textAppearance="@style/HotelsApp.TextAppearance.Body1"
        android:textColor="@color/grey500"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewTourDates" />

    <TextView
        android:id="@+id/textViewNumberOfNights"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/HotelsApp.TextAppearance.Body1"
        app:layout_constrainedWidth="true"
        app:layout_constraintBaseline_toBaselineOf="@id/textViewNumberOfNightsParagraph"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@id/guideline"
        tools:text="7 ночей" />

    <TextView
        android:id="@+id/textViewHotelParagraph"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/hotel"
        android:textAppearance="@style/HotelsApp.TextAppearance.Body1"
        android:textColor="@color/grey500"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewNumberOfNights" />

    <TextView
        android:id="@+id/textViewHotel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/HotelsApp.TextAppearance.Body1"
        app:layout_constrainedWidth="true"
        app:layout_constraintBaseline_toBaselineOf="@id/textViewHotelParagraph"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@id/guideline"
        tools:text="Steigenberger Makadi" />

    <TextView
        android:id="@+id/textViewRoomParagraph"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/room"
        android:textAppearance="@style/HotelsApp.TextAppearance.Body1"
        android:textColor="@color/grey500"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewHotel" />

    <TextView
        android:id="@+id/textViewRoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/HotelsApp.TextAppearance.Body1"
        app:layout_constrainedWidth="true"
        app:layout_constraintBaseline_toBaselineOf="@id/textViewRoomParagraph"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@id/guideline"
        tools:text="Стандартный с видом на бассейн или сад" />

    <TextView
        android:id="@+id/textViewNutritionParagraph"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/nutrition"
        android:textAppearance="@style/HotelsApp.TextAppearance.Body1"
        android:textColor="@color/grey500"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewRoom" />

    <TextView
        android:id="@+id/textViewNutrition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/HotelsApp.TextAppearance.Body1"
        app:layout_constrainedWidth="true"
        app:layout_constraintBaseline_toBaselineOf="@id/textViewNutritionParagraph"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@id/guideline"
        tools:text="Все включено" />

</androidx.constraintlayout.widget.ConstraintLayout>